# SPAR-causal-probes

./: .gitignore  README.md  RUNPOD_SETUP_GUIDE.md  dct.py  main.py  pyproject.toml
af_experiments/: dct_experiment.ipynb  dct_experiment_local.ipynb  geometry_of_truth_download.ipynb  inference.ipynb  internal_state_download.ipynb
af_experiments/data_sourcing/: liars_bench_data.ipynb
af_experiments/dct/: dct.py  dct_demo_local.ipynb  dct_experiment.ipynb  dct_experiment_local.ipynb  train_dct_probes.py
af_experiments/dct/configs/: sweep_example.yaml
af_experiments/dct/pipeline/data/: activation_store.py  liars_bench.py
af_experiments/dct/pipeline/eval/: metrics.py  token_strategies.py
af_experiments/dct/pipeline/logging_utils/: wandb_logger.py
af_experiments/dct/scripts/: convert_dct_to_probes.py  evaluate_probe.py  extract_activations.py
af_experiments/jane_street/: jane_street_dct.ipynb
af_experiments/liars_bench/: liars_bench_inference.ipynb
af_experiments/mean_difference_steering/: geometry_of_truth_EDA.ipynb  mean_of_difference_steering.ipynb
data/: geometry_of_truth_qa.csv  geometry_of_truth_qa_judged.csv  internal_state_qa.csv
liarsbench_generation_pipeline/: README.md  __init__.py  config.example.json  config.targeted_deception.example.json  eval_detected_types.ipynb  openrouter_client.py  pipeline.py  prepare_nq_prompts.py  prompts.py
liarsbench_generation_pipeline/scripts/: prepare_nq_prompts.sh  run_pipeline_neutral.sh  run_pipeline_targeted.sh
rl/: __init__.py  grpo_steering.py  policy_answer_eval.ipynb  reward_model.ipynb
scripts/: README.md  run_grpo_steering.sh  run_grpo_steering_low_strength.sh  run_grpo_steering_zero_init.sh
setup/: RUNPOD_SETUP_GUIDE.md  openrouter_test.ipynb
(+1 files in other folders)
