[project]
name = "spar-causal-probes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "melbo-dct-post",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=4.46.3",
]

[tool.uv.sources]
melbo-dct-post = { git = "https://github.com/amack315/melbo-dct-post.git" }
