[project]
name = "spar-causal-probes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "melbo-dct-post",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.46.3",
    "wandb>=0.25.0",
]

[tool.uv.sources]
melbo-dct-post = { git = "https://github.com/amack315/melbo-dct-post.git" }
